--- a/wall.html
+++ b/wall.html
@@ -146,26 +146,9 @@
 		Your browser does not support the <code>audio</code> element.  
 	</audio>
 </div>
-<div id="about">
-    Made with love by <a href="http://9elements.com/"><strong>9elements.com</strong></a>
-</div>
-<div id="social">
-  <!-- Place this tag in the <head> of your document-->
-  <link href="" rel="publisher" />
 
-  <!-- Place this tag where you want the badge to render-->
-  <a href=""/></a>
-  on Google+
-  <br />
-  
-</div>
 <div id="watchlater">
-  <a id="watchlater-image" href=""><img src="watchlater-2.0.png" alt="watchlater" title="watchlater"></a>
-  <div class="watchlater-content">
-    <h6>We also made</h6>
-    <div class="watchlater-claim"><a href=""><strong>watchlater for iPhone and iPad</strong></a></div>
-    <div class="watchlater-comment">"The Instapaper for Videos" - <span>gigaOM</span></div>
-  </div>
+  <a id="watchlater-image" href=""><img src="icon.png"></a>
 </div>
 </body>
 </html>
