--- a/wall.html
+++ b/wall.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>HTML5 Canvas and Audio Experiment</title>
+  <title>Tweet Wall</title>
   
   <meta name="keywords" content="html5, canvas, experiment" />
   <meta name="description" content="An html5 canvas experiment by THE INTERNETS" />
@@ -12,6 +12,7 @@
   
   <script src="processing.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="jquery-1.6.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="date.extensions.js"></script>
   <script src="apt18.js" type="text/javascript" charset="utf-8"></script>
   
   <style type="text/css" media="screen">
