--- a/wall.html
+++ b/wall.html
@@ -65,7 +65,7 @@
 	 	position: absolute;
 		z-index: -1;
 		top:-350px;
-		right:-200px;
+		left:250px;
 
 		/*max-width: 600px;*/
 		max-height: 600px;
