--- a/wall.html
+++ b/wall.html
@@ -106,6 +106,11 @@
 	  
 	  -webkit-animation: 'wobble' 5s;
   	-webkit-animation-iteration-count: infinite;
+	
+
+	  	-moz-animation:myfirst 5s; /* Firefox */
+	-moz-animation-iteration-count: infinite;
+	
 	}
 	
 	@-webkit-keyframes 'wobble' {
@@ -117,6 +122,30 @@
   	95% { -webkit-transform: translate(0, 0) rotate(-2deg) scale(0.9); }	
   	100% { -webkit-transform: translate(0, 0) rotate(0deg) scale(1); }
   }
+
+
+
+	@-moz-keyframes myfirst /* Firefox */
+	{
+
+
+	0%  { -moz-transform:  translate(0, 0); 
+		-moz-transform: rotate(0deg); 
+		-moz-transform: scale(1); }
+	75% { -moz-transform:  rotate(0deg) }
+	80% { -moz-transform: rotate(2deg);
+	      scale(1); }
+	85% { -moz-transform: translate(0, 0); 
+		  -moz-transform: rotate(-2deg); 
+		  -moz-transform: scale(1.1); }
+	90% { -moz-transform: rotate(2deg);
+		   scale(1);  }
+	95% { -moz-transform: scale(0.9); }
+	100% { -moz-transform: rotate(0deg);
+	scale(1); }
+	}
+
+
   
 	
 	#watchlater h6 {
