--- a/wall.html
+++ b/wall.html
@@ -94,7 +94,7 @@
 	}
 	
 	#watchlater {
-	  font-size:11px;
+	  font-size:20px;
 		position:absolute;
 		font-weight:normal;		
 		bottom:0px;
@@ -103,6 +103,7 @@
 		width: 378px;
 		height: 85px;
 	  line-height: 1.5;
+	  color:#fff;
 	  
 	  -webkit-animation: 'wobble' 5s;
   	-webkit-animation-iteration-count: infinite;
@@ -186,7 +187,7 @@
 </div>
 
 <div id="watchlater">
-  <a id="watchlater-image" href=""><img src="icon.png"></a>
+  <h1><a id="watchlater-image" href=""><img src="icon.png"></a>#joynme922</h1>
 </div>
 </body>
 </html>
